Ego pose data is required

--- a/docs-src/docs/upload-data/code-snippets/zod/_upload_alcs_seq.mdx
+++ b/docs-src/docs/upload-data/code-snippets/zod/_upload_alcs_seq.mdx
@@ -17,5 +17,6 @@ leaves aggregation to the platform. As such it is very similar to the LiDAR-and-
 {codeRef('examples/zod/upload_alcs_scene.py#L56-L58', '{3}')}
 2. The `Frame`s are of an aggregated-scene specific type
 {codeRef('examples/zod/upload_alcs_scene.py#L82-L91', '{2}')}
+3. Ego pose data is required
 
 Otherwise the two approaches are very similar - refer to the *Lidars and Cameras Sequence* tab.
